HW SVC logistic regression

--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,23 +17,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['gridsearch'] in *.ipynb files\n",
+      "Looking for: ['px', 'kde'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_CS_videogames_HW.ipynb\n",
-      "               : GridSearchCV\\n\",\n",
-      "   , \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_A_B_testing_HW.ipynb\n",
+      "               : px\"\n",
+      "   ]\n",
+      "  },\n",
+      "  {\n",
+      "  , kDehV1iPL83USViAvfba, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ2.ipynb\n",
+      "               : Px999/lz/+4IMP3rAENm, kDE7rV+He/TKPjgS+Xcj, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_linreg_confidence_interval.ipynb\n",
+      "               : px\\n\",\"import matplo, kDeABMk9glSwivvAbb78, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_Darwinbooks_recommend.ipynb\n",
+      "               : PXfu3KFnz56UL18efX19, KDevXvTmzdvmLHXr19T7, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_HW_funcs_group.ipynb\n",
+      "               : Px7mW/ZVACvAoeowmAge, KdELhLegb1lW4d6OHBKX, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_LABa_Kuzmin_Pandas.ipynb\n",
+      "               : px\\\"viewBox=\\\"0 0 24, KDEEJtkKhUGQISrAVCoU, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ3.ipynb\n",
+      "               : Px999/lz/+4IMP3rAENm, kDE7rV+He/TKPjgS+Xcj, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Confidential_intervals_HW.ipynb\n",
+      "               : px\\n\",\n",
+      "    \"import p, kdevW6eTJk+ro6AiZbXL, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Data_Visualization_HW.ipynb\n",
+      "               : px\\n\",\"\\n\",\"# increa, KdeTHO2Za3l1bVDuTxpC, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_8.ipynb\n",
+      "               : pXv+Lf//43Vuvpe30UFB, kDeWWM7BTGR7cObJoPif, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Python_Datatypes_LOOPs.ipynb\n",
+      "               : PXzaTVs\",\"outputId\":, KDEesCaTVe\",\"outputI, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_LABa.ipynb\n",
+      "               : PXdO0kWAn8EvGlHraqeA, kDeoRrooahz7cnaNNOUV, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/DLS_simpsons_baseline.ipynb\n",
+      "               : px\\n\",\"RESCALE_SIZE , kDEJH/giip3yr+PfC0iP, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_Advanced_Optimization.ipynb\n",
+      "               : px69Yt3Lp1C6FQCIFAAN, KdeB+RqaBCZxoWhEPDGG, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_t_Tests.ipynb\n",
+      "               : PXq1avF8oSEBLzwwgutb, kdERERERCGBczProHFEj, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_LogRegression_SVC HW.ipynb\n",
+      "               : px\\n\",\n",
+      "    \"import s, kDecaFRgC9SV8fUUDTjA, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_linear_polynomial_regression.ipynb\n",
+      "               : px\\n\",\n",
+      "        \"impo, KdeAwE4G8E/LEMPGOyAG, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/python_open_files.ipynb\n",
+      "               : pxlpa1IhxR\",\"outputI, kdERPHgTUxERArEcCciU, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_4.ipynb\n",
+      "               : Px5IlSzTZb6B89913+Pr, KdEAIDBw7Evffeq/ZMOl, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW9.ipynb\n",
+      "               : PXv2MHHiRO677z42bNhw, kdERMRqlQpEiYmJFBYWm, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_6.ipynb\n",
+      "               : Px7mfZcV9019bWqry83H, kDenF/nVKclv7jo/N1+7, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Confidence_Intervals.ipynb\n",
+      "               : px\\n\",\n",
+      "    \"except I, KdENBU6gLWs85q/zjt7I, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_log_regression_SVM.ipynb\n",
+      "               : PxFEULiDiqKIMaYoapiC, KDEIJk5RJKgoQQkrDEcz, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Power_Min_sample_size_HW.ipynb\n",
+      "               : pxR538+bN6NmzJ5ydnWF, KDEKnmAdvs+jeDJrRqxU, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Case_Power_MinSampleSize_HW.ipynb\n",
+      "               : pxR538+bN6NmzJ5ydnWF, KDEKnmAdvs+jeDJrRqxU, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_3.ipynb\n",
+      "               : Px6NRo0YpOjpaYWFh6t2, kderUqdz6efPmKSkpSZL, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_bs_conf_int.ipynb\n",
+      "               : px3X3FxMXPmzOG7776jq, KDEqDjx4/zj3/8AwCtVk, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_Numpy_Matrix.ipynb\n",
+      "               : Pxo0bp48//viUx3s8Hp9, KDEsgOH5bCwuzxmjXSjT, \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_Total_HW.ipynb\n",
-      "               : GridSearchCV\"]},{\"ce, \n"
+      "               : px\\\"viewBox=\\\"0 0 24, kde3/i+RvF96UR8H1n5b, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ.ipynb\n",
+      "               : pX1EdyyGUD+cT5xMkr8Q, kDEOxmi4oGOVb/Y54kEE, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_DispAnalysis_ABtests.ipynb\n",
+      "               : PxRfff2a8fUHLiB/nisW, Kde86Yp4gquZgLQeTAzA, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_Masterclass.ipynb\n",
+      "               : PXq0brrpJn344Yd2/YZh, kDeRRwAcFsXL15Us2bN9, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_Capstone.ipynb\n",
+      "               : PXXX+Pll18GAGRnZyMoK, kdED45HgohskK+vL1xcX, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/REGEX_practice.ipynb\n",
+      "               : Px3e78bbOCywK8YTlfO/, kdemq7T6EnCv6vA42fDx, \n"
      ]
     }
    ],
