--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,40 +17,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['plt.scatter'] in *.ipynb files\n",
+      "Looking for: [\"'3d'\"] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_LogRegression_SVC_HW.ipynb\n",
-      "               : plt.scatter(df_raw[', \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/DLS linreg_regularization.ipynb\n",
-      "               : plt.scatter(X_train,, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_LABa_Kuzmin_Pandas.ipynb\n",
-      "               : plt.scatter(total_ca, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_LABa.ipynb\n",
-      "               : plt.scatter(\\n\",\"   , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Gradient_descent.ipynb\n",
-      "               : plt.scatter(X, Y)\\n\", \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/FEML3_gradient_descent_Ponomareva.ipynb\n",
-      "               : plt.scatter(X, Y)\\n\", \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_linear_polynomial_regression.ipynb\n",
-      "               : plt.scatter(x, y, s=, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_log_regression_SVM.ipynb\n",
-      "               : plt.scatter(X[:,0], , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_Total_HW.ipynb\n",
-      "               : plt.scatter(\\n\",\"   , \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ2.ipynb\n",
+      "               : '3d')\\n\",\n",
+      "    \"\\n\",\n",
+      ", \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ3.ipynb\n",
+      "               : '3d')\\n\",\n",
+      "    \"\\n\",\n",
+      ", \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_Advanced_Optimization.ipynb\n",
+      "               : '3d')\\n\",\n",
+      "        \"a, \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_Masterclass.ipynb\n",
-      "               : plt.scatter(res[0], , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_Capstone.ipynb\n",
-      "               : plt.scatter(x, func(, \n"
+      "               : '3d'\\u001b[0m\\u001b[, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_5.ipynb\n",
+      "               : '3d')\\n\",\n",
+      "        \"\\, \n"
      ]
     }
    ],
