HW_Metrics_Regularisations

--- a/ML_Binary_Classification_wo_sklearn_HW.ipynb
+++ b/ML_Binary_Classification_wo_sklearn_HW.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        " array(['setosa', 'versicolor', 'virginica'], dtype='<U10'))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "((100, 4), (100, 1))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,15 +130,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/velo1/opt/anaconda3/lib/python3.9/site-packages/plotly/express/_core.py:279: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
-      "  dims = [\n"
+      "/Users/velo1/opt/anaconda3/lib/python3.9/site-packages/plotly/express/_core.py:279: FutureWarning:\n",
+      "\n",
+      "iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
+      "\n"
      ]
     },
     {
@@ -1752,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1796,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1883,7 +1885,7 @@
        "petal width (cm)   0.682845"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1903,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1962,7 +1964,7 @@
        "83        1.0   2    Err"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1971,7 +1973,7 @@
     "# ravel arrays to confirm DataFrame input format   (GT means GROUND TRUTH value)\n",
     "# we rounded predictions to 1 or 2\n",
     "df = pd.DataFrame({'Predicted':np.round(lr.predict(X).ravel()), 'GT': y.ravel()})\n",
-    "df[\"Result\"] = df.apply(lambda x: 'TP' if x.Predicted == x.GT else 'Err', axis= 1 )\n",
+    "df[\"Result\"] = df.apply(lambda x: 'Trues' if x.Predicted == x.GT else 'Err', axis= 1 )\n",
     "df[df.Predicted != df.GT]"
    ]
   },
@@ -1980,12 +1982,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$Accuracy = \\frac{TP}{TP + FP}$"
+    "$Accuracy = \\frac{TP+TN}{TP + FP + TN + FN }= \\frac{trues}{all}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2011,7 +2013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2020,7 +2022,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2039,7 +2041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2050,14 +2052,14 @@
        },
        "data": [
         {
-         "hovertemplate": "color=1:TP<br>x=%{x}<br>y=%{y}<extra></extra>",
-         "legendgroup": "1:TP",
+         "hovertemplate": "color=1:Trues<br>x=%{x}<br>y=%{y}<extra></extra>",
+         "legendgroup": "1:Trues",
          "marker": {
           "color": "#636efa",
           "symbol": "circle"
          },
          "mode": "markers",
-         "name": "1:TP",
+         "name": "1:Trues",
          "orientation": "v",
          "showlegend": true,
          "type": "scatter",
@@ -2188,14 +2190,14 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "color=2:TP<br>x=%{x}<br>y=%{y}<extra></extra>",
-         "legendgroup": "2:TP",
+         "hovertemplate": "color=2:Trues<br>x=%{x}<br>y=%{y}<extra></extra>",
+         "legendgroup": "2:Trues",
          "marker": {
           "color": "#00cc96",
           "symbol": "circle"
          },
          "mode": "markers",
-         "name": "2:TP",
+         "name": "2:Trues",
          "orientation": "v",
          "showlegend": true,
          "type": "scatter",
@@ -6397,7 +6399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -6449,7 +6451,7 @@
        "83      False   1    Err"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6457,13 +6459,13 @@
    "source": [
     "# ravel arrays to confirm DataFrame input format\n",
     "df = pd.DataFrame({'Predicted':lr.predict(XX).ravel(), 'GT': y.ravel()-1})\n",
-    "df[\"Result\"] = df.apply(lambda x: 'TP' if x.Predicted == x.GT else 'Err', axis= 1 )\n",
+    "df[\"Result\"] = df.apply(lambda x: 'Trues' if x.Predicted == x.GT else 'Err', axis= 1 )\n",
     "df[df.Predicted != df.GT]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -6474,14 +6476,14 @@
        },
        "data": [
         {
-         "hovertemplate": "color=0:TP<br>x=%{x}<br>y=%{y}<extra></extra>",
-         "legendgroup": "0:TP",
+         "hovertemplate": "color=0:Trues<br>x=%{x}<br>y=%{y}<extra></extra>",
+         "legendgroup": "0:Trues",
          "marker": {
           "color": "#636efa",
           "symbol": "circle"
          },
          "mode": "markers",
-         "name": "0:TP",
+         "name": "0:Trues",
          "orientation": "v",
          "showlegend": true,
          "type": "scatter",
@@ -6612,14 +6614,14 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "color=1:TP<br>x=%{x}<br>y=%{y}<extra></extra>",
-         "legendgroup": "1:TP",
+         "hovertemplate": "color=1:Trues<br>x=%{x}<br>y=%{y}<extra></extra>",
+         "legendgroup": "1:Trues",
          "marker": {
           "color": "#00cc96",
           "symbol": "circle"
          },
          "mode": "markers",
-         "name": "1:TP",
+         "name": "1:Trues",
          "orientation": "v",
          "showlegend": true,
          "type": "scatter",
