--- a/ML_Metrics_Regularization_HW.ipynb
+++ b/ML_Metrics_Regularization_HW.ipynb
@@ -562,43 +562,43 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2163</th>\n",
-       "      <td>232134278</td>\n",
-       "      <td>Colin Fleming</td>\n",
-       "      <td>GBR</td>\n",
-       "      <td>male</td>\n",
-       "      <td>1984</td>\n",
-       "      <td>1.88</td>\n",
-       "      <td>78.0</td>\n",
-       "      <td>tennis</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9283</th>\n",
-       "      <td>87660757</td>\n",
-       "      <td>Rustam Djangabaev</td>\n",
-       "      <td>UZB</td>\n",
-       "      <td>male</td>\n",
-       "      <td>1993</td>\n",
-       "      <td>1.83</td>\n",
-       "      <td>146.0</td>\n",
-       "      <td>weightlifting</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9515</th>\n",
-       "      <td>21017895</td>\n",
-       "      <td>Sara Moreira</td>\n",
-       "      <td>POR</td>\n",
+       "      <th>6197</th>\n",
+       "      <td>92875421</td>\n",
+       "      <td>Liliana da Silva Venancio</td>\n",
+       "      <td>ANG</td>\n",
        "      <td>female</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>1.80</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>handball</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2920</th>\n",
+       "      <td>460751397</td>\n",
+       "      <td>Elinor Barker</td>\n",
+       "      <td>GBR</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>cycling</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>383</th>\n",
+       "      <td>724710281</td>\n",
+       "      <td>Alexander Huber</td>\n",
+       "      <td>AUT</td>\n",
+       "      <td>male</td>\n",
        "      <td>1985</td>\n",
-       "      <td>1.66</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>athletics</td>\n",
+       "      <td>1.79</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>volleyball</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -608,15 +608,15 @@
        "</div>"
       ],
       "text/plain": [
-       "             id               name nationality     sex   dob  height  weight  \\\n",
-       "2163  232134278      Colin Fleming         GBR    male  1984    1.88    78.0   \n",
-       "9283   87660757  Rustam Djangabaev         UZB    male  1993    1.83   146.0   \n",
-       "9515   21017895       Sara Moreira         POR  female  1985    1.66    50.0   \n",
+       "             id                       name nationality     sex   dob  height  \\\n",
+       "6197   92875421  Liliana da Silva Venancio         ANG  female  1995    1.80   \n",
+       "2920  460751397              Elinor Barker         GBR  female  1994    1.68   \n",
+       "383   724710281            Alexander Huber         AUT    male  1985    1.79   \n",
        "\n",
-       "              sport  gold  silver  bronze  \n",
-       "2163         tennis     0       0       0  \n",
-       "9283  weightlifting     0       0       0  \n",
-       "9515      athletics     0       0       0  "
+       "      weight       sport  gold  silver  bronze  \n",
+       "6197    93.0    handball     0       0       0  \n",
+       "2920    56.0     cycling     1       0       0  \n",
+       "383     64.0  volleyball     0       0       0  "
       ]
      },
      "execution_count": 9,
@@ -739,36 +739,36 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3052</th>\n",
-       "      <td>AUS</td>\n",
+       "      <th>1862</th>\n",
+       "      <td>KEN</td>\n",
        "      <td>female</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>1.65</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>rugby sevens</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8659</th>\n",
-       "      <td>RSA</td>\n",
-       "      <td>male</td>\n",
        "      <td>1987</td>\n",
-       "      <td>1.88</td>\n",
-       "      <td>95.0</td>\n",
+       "      <td>1.62</td>\n",
+       "      <td>60.0</td>\n",
        "      <td>rugby sevens</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11241</th>\n",
-       "      <td>SIN</td>\n",
+       "      <th>3191</th>\n",
+       "      <td>SVK</td>\n",
        "      <td>female</td>\n",
-       "      <td>1994</td>\n",
-       "      <td>1.68</td>\n",
-       "      <td>54.0</td>\n",
+       "      <td>1979</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>table tennis</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5412</th>\n",
+       "      <td>USA</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>1.66</td>\n",
+       "      <td>51.0</td>\n",
        "      <td>table tennis</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -779,15 +779,15 @@
        "</div>"
       ],
       "text/plain": [
-       "      nationality     sex   dob  height  weight         sport  gold  silver  \\\n",
-       "3052          AUS  female  1995    1.65    63.0  rugby sevens     1       0   \n",
-       "8659          RSA    male  1987    1.88    95.0  rugby sevens     0       0   \n",
-       "11241         SIN  female  1994    1.68    54.0  table tennis     0       0   \n",
+       "     nationality     sex   dob  height  weight         sport  gold  silver  \\\n",
+       "1862         KEN  female  1987    1.62    60.0  rugby sevens     0       0   \n",
+       "3191         SVK  female  1979    1.75    60.0  table tennis     0       0   \n",
+       "5412         USA    male  2000    1.66    51.0  table tennis     0       0   \n",
        "\n",
-       "       bronze  \n",
-       "3052        0  \n",
-       "8659        1  \n",
-       "11241       0  "
+       "      bronze  \n",
+       "1862       0  \n",
+       "3191       0  \n",
+       "5412       0  "
       ]
      },
      "execution_count": 13,
@@ -135301,31 +135301,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>10766</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>TN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6724</th>\n",
+       "      <th>5376</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>TP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5743</th>\n",
+       "      <th>1155</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>TP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>291</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>TN</td>\n",
+       "      <th>3320</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>TP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5022</th>\n",
+       "      <th>5065</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>TP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9427</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>TP</td>\n",
@@ -135335,12 +135335,12 @@
        "</div>"
       ],
       "text/plain": [
-       "       Predicted  GT conf_matrix\n",
-       "10766          0   0          TN\n",
-       "6724           1   1          TP\n",
-       "5743           1   1          TP\n",
-       "291            0   0          TN\n",
-       "5022           1   1          TP"
+       "      Predicted  GT conf_matrix\n",
+       "5376          1   1          TP\n",
+       "1155          1   1          TP\n",
+       "3320          1   1          TP\n",
+       "5065          1   1          TP\n",
+       "9427          1   1          TP"
       ]
      },
      "execution_count": 28,
@@ -147150,10 +147150,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>5.942988</td>\n",
-       "      <td>0.203686</td>\n",
-       "      <td>0.009452</td>\n",
-       "      <td>0.000550</td>\n",
+       "      <td>9.719573</td>\n",
+       "      <td>0.283259</td>\n",
+       "      <td>0.019054</td>\n",
+       "      <td>0.005435</td>\n",
        "      <td>0.1</td>\n",
        "      <td>1000.0</td>\n",
        "      <td>l1</td>\n",
@@ -147161,41 +147161,41 @@
        "      <td>StandardScaler()</td>\n",
        "      <td>{'logit__C': 0.1, 'logit__max_iter': 1000.0, '...</td>\n",
        "      <td>0.906983</td>\n",
-       "      <td>0.905510</td>\n",
-       "      <td>0.910931</td>\n",
-       "      <td>0.891296</td>\n",
-       "      <td>0.902735</td>\n",
-       "      <td>0.903491</td>\n",
-       "      <td>0.006647</td>\n",
+       "      <td>0.905512</td>\n",
+       "      <td>0.910933</td>\n",
+       "      <td>0.891292</td>\n",
+       "      <td>0.902739</td>\n",
+       "      <td>0.903492</td>\n",
+       "      <td>0.006649</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>0.625455</td>\n",
-       "      <td>0.018298</td>\n",
-       "      <td>0.020993</td>\n",
-       "      <td>0.004635</td>\n",
+       "      <td>1.328660</td>\n",
+       "      <td>0.113101</td>\n",
+       "      <td>0.034642</td>\n",
+       "      <td>0.014063</td>\n",
        "      <td>0.1</td>\n",
        "      <td>1000.0</td>\n",
        "      <td>l1</td>\n",
        "      <td>liblinear</td>\n",
        "      <td>StandardScaler()</td>\n",
        "      <td>{'logit__C': 0.1, 'logit__max_iter': 1000.0, '...</td>\n",
-       "      <td>0.906919</td>\n",
-       "      <td>0.905506</td>\n",
-       "      <td>0.910838</td>\n",
+       "      <td>0.906920</td>\n",
+       "      <td>0.905504</td>\n",
+       "      <td>0.910837</td>\n",
        "      <td>0.891230</td>\n",
-       "      <td>0.902778</td>\n",
+       "      <td>0.902779</td>\n",
        "      <td>0.903454</td>\n",
-       "      <td>0.006643</td>\n",
+       "      <td>0.006642</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.305902</td>\n",
-       "      <td>0.036653</td>\n",
-       "      <td>0.020240</td>\n",
-       "      <td>0.002510</td>\n",
+       "      <td>0.520560</td>\n",
+       "      <td>0.098216</td>\n",
+       "      <td>0.034391</td>\n",
+       "      <td>0.004602</td>\n",
        "      <td>0.01</td>\n",
        "      <td>1000.0</td>\n",
        "      <td>l2</td>\n",
@@ -147213,31 +147213,31 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3.160047</td>\n",
-       "      <td>0.066965</td>\n",
-       "      <td>0.021936</td>\n",
-       "      <td>0.002786</td>\n",
+       "      <td>4.346294</td>\n",
+       "      <td>0.146265</td>\n",
+       "      <td>0.036953</td>\n",
+       "      <td>0.009248</td>\n",
        "      <td>0.01</td>\n",
        "      <td>1000.0</td>\n",
        "      <td>l2</td>\n",
        "      <td>saga</td>\n",
        "      <td>StandardScaler()</td>\n",
        "      <td>{'logit__C': 0.01, 'logit__max_iter': 1000.0, ...</td>\n",
-       "      <td>0.903706</td>\n",
-       "      <td>0.900852</td>\n",
-       "      <td>0.908918</td>\n",
-       "      <td>0.888863</td>\n",
-       "      <td>0.900271</td>\n",
-       "      <td>0.900522</td>\n",
-       "      <td>0.006584</td>\n",
+       "      <td>0.903709</td>\n",
+       "      <td>0.900851</td>\n",
+       "      <td>0.908920</td>\n",
+       "      <td>0.888833</td>\n",
+       "      <td>0.900263</td>\n",
+       "      <td>0.900515</td>\n",
+       "      <td>0.006595</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.775527</td>\n",
-       "      <td>0.055391</td>\n",
-       "      <td>0.017823</td>\n",
-       "      <td>0.002119</td>\n",
+       "      <td>1.042465</td>\n",
+       "      <td>0.022867</td>\n",
+       "      <td>0.040952</td>\n",
+       "      <td>0.011799</td>\n",
        "      <td>0.01</td>\n",
        "      <td>1000.0</td>\n",
        "      <td>l2</td>\n",
@@ -147259,11 +147259,11 @@
       ],
       "text/plain": [
        "   mean_fit_time  std_fit_time  mean_score_time  std_score_time  \\\n",
-       "6       5.942988      0.203686         0.009452        0.000550   \n",
-       "8       0.625455      0.018298         0.020993        0.004635   \n",
-       "4       0.305902      0.036653         0.020240        0.002510   \n",
-       "3       3.160047      0.066965         0.021936        0.002786   \n",
-       "5       0.775527      0.055391         0.017823        0.002119   \n",
+       "6       9.719573      0.283259         0.019054        0.005435   \n",
+       "8       1.328660      0.113101         0.034642        0.014063   \n",
+       "4       0.520560      0.098216         0.034391        0.004602   \n",
+       "3       4.346294      0.146265         0.036953        0.009248   \n",
+       "5       1.042465      0.022867         0.040952        0.011799   \n",
        "\n",
        "  param_logit__C param_logit__max_iter param_logit__penalty  \\\n",
        "6            0.1                1000.0                   l1   \n",
@@ -147281,23 +147281,23 @@
        "\n",
        "                                              params  split0_test_score  \\\n",
        "6  {'logit__C': 0.1, 'logit__max_iter': 1000.0, '...           0.906983   \n",
-       "8  {'logit__C': 0.1, 'logit__max_iter': 1000.0, '...           0.906919   \n",
+       "8  {'logit__C': 0.1, 'logit__max_iter': 1000.0, '...           0.906920   \n",
        "4  {'logit__C': 0.01, 'logit__max_iter': 1000.0, ...           0.903703   \n",
-       "3  {'logit__C': 0.01, 'logit__max_iter': 1000.0, ...           0.903706   \n",
+       "3  {'logit__C': 0.01, 'logit__max_iter': 1000.0, ...           0.903709   \n",
        "5  {'logit__C': 0.01, 'logit__max_iter': 1000.0, ...           0.903635   \n",
        "\n",
        "   split1_test_score  split2_test_score  split3_test_score  split4_test_score  \\\n",
-       "6           0.905510           0.910931           0.891296           0.902735   \n",
-       "8           0.905506           0.910838           0.891230           0.902778   \n",
+       "6           0.905512           0.910933           0.891292           0.902739   \n",
+       "8           0.905504           0.910837           0.891230           0.902779   \n",
        "4           0.900850           0.908912           0.888852           0.900320   \n",
-       "3           0.900852           0.908918           0.888863           0.900271   \n",
+       "3           0.900851           0.908920           0.888833           0.900263   \n",
        "5           0.900843           0.908778           0.888865           0.900204   \n",
        "\n",
        "   mean_test_score  std_test_score  rank_test_score  \n",
-       "6         0.903491        0.006647                1  \n",
-       "8         0.903454        0.006643                2  \n",
+       "6         0.903492        0.006649                1  \n",
+       "8         0.903454        0.006642                2  \n",
        "4         0.900527        0.006586                3  \n",
-       "3         0.900522        0.006584                4  \n",
+       "3         0.900515        0.006595                4  \n",
        "5         0.900465        0.006541                5  "
       ]
      },
@@ -147425,7 +147425,7 @@
     {
      "data": {
       "text/plain": [
-       "(0.9034909901962072, 'roc_auc')"
+       "(0.903491790241015, 'roc_auc')"
       ]
      },
      "execution_count": 49,
@@ -147725,7 +147725,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "3f0fc0265faf3f010b6ea13d4d06fa8f6d9bd8f9a0a69886dc52220c62e8c74f"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
